// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatIntegrationCampaigns component should display the empty state correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations"
            >
              Integrations
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations/smooch_inside"
            >
              Chat (Deprecated)
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <a
          class="btn btn-success"
          to="/app/settings/integrations/smooch_inside/118/campaigns/new"
        >
          Create campaign
        </a>
      </div>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/migration"
      >
        Migration
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/appearance"
      >
        Appearance
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/installation"
      >
        Installation
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/preferences"
      >
        Preferences
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/campaigns"
      >
        Campaigns
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/quick_replies"
      >
        Quick replies
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <p>
        Use campaigns to prompt visitors of your website to start chatting with your team.
      </p>
      <div>
        This integration doesn't have any campaigns yet.
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatIntegrationCampaigns component should display the list correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations"
            >
              Integrations
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/integrations/smooch_inside"
            >
              Chat (Deprecated)
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <a
          class="btn btn-success"
          to="/app/settings/integrations/smooch_inside/118/campaigns/new"
        >
          Create campaign
        </a>
      </div>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/migration"
      >
        Migration
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/appearance"
      >
        Appearance
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/installation"
      >
        Installation
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/preferences"
      >
        Preferences
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/campaigns"
      >
        Campaigns
      </a>
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/integrations/smooch_inside/118/quick_replies"
      >
        Quick replies
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <p>
        Use campaigns to prompt visitors of your website to start chatting with your team.
      </p>
    </div>
    <table
      class="table-integrations mt-3 table table-hover"
    >
      <tbody>
        <tr>
          <td
            class="smallest align-middle"
          >
            <div>
              <label
                aria-checked="true"
                class="label label"
                for="toggle-button-1"
                role="switch"
              >
                <input
                  checked=""
                  class="input"
                  disabled=""
                  id="toggle-button-1"
                  name="toggle-button-1"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
              </label>
            </div>
          </td>
          <td
            class="link-full-td"
          >
            <a
              to="/app/settings/integrations/smooch_inside/118/campaigns/156a4d-fg68h40-sd6f4"
            >
              <div>
                <b>
                  Super campaign
                </b>
              </div>
            </a>
          </td>
          <td
            class="smallest align-middle"
          >
            <a
              to="/app/settings/integrations/smooch_inside/118/campaigns/156a4d-fg68h40-sd6f4"
            >
              <i
                class="material-icons md-2 align-middle icon-go-forward"
              >
                keyboard_arrow_right
              </i>
            </a>
          </td>
        </tr>
        <tr>
          <td
            class="smallest align-middle"
          >
            <div>
              <label
                aria-checked="false"
                class="label label"
                for="toggle-button-2"
                role="switch"
              >
                <input
                  class="input"
                  disabled=""
                  id="toggle-button-2"
                  name="toggle-button-2"
                  type="checkbox"
                />
                <div
                  class="slider"
                />
              </label>
            </div>
          </td>
          <td
            class="link-full-td"
          >
            <a
              to="/app/settings/integrations/smooch_inside/118/campaigns/not-so-good-campaign-d8f9-fds486-sf78"
            >
              <div>
                <b>
                  Not so good campaign
                </b>
              </div>
            </a>
          </td>
          <td
            class="smallest align-middle"
          >
            <a
              to="/app/settings/integrations/smooch_inside/118/campaigns/not-so-good-campaign-d8f9-fds486-sf78"
            >
              <i
                class="material-icons md-2 align-middle icon-go-forward"
              >
                keyboard_arrow_right
              </i>
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
